src/objects/IEC_Email_Notification__c.object
<CustomObject>
    <description>A placeholder to be able to send email notifications from within the IEC site</description>
    <fields>
        <fullName>Body_Title__c</fullName>
        <label>Body Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>Contains the dynamic body of the email</description>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the email have already been sent</description>
        <label>Email Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <description>Email template that will be used for this email notification</description>
        <label>Email Template</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Email__c</fullName>
        <label>To Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>IEC Email Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>To_Email__c</columns>
        <columns>Email_Template__c</columns>
        <columns>Confirmation_Number__c</columns>
        <columns>Email_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EN-{000000000}</displayFormat>
        <label>IEC Email Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEC Email Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>